pbr: - UI pass color space fixes - DIV element absolute position fix - code style
editor:
- UI dialog box development

--- a/tools/editor/editor.vcxproj.filters
+++ b/tools/editor/editor.vcxproj.filters
@@ -458,6 +458,9 @@
     <ClInclude Include="..\..\app\src\main\cpp\include\pbr\image_ui_element.hpp">
       <Filter>Header Files\core\pbr</Filter>
     </ClInclude>
+    <ClInclude Include="include\theme.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="src\version.rc">
