--- a/tools/editor/editor.vcxproj
+++ b/tools/editor/editor.vcxproj
@@ -901,6 +901,7 @@
     <ClInclude Include="include\rect.hpp" />
     <ClInclude Include="include\render_session.hpp" />
     <ClInclude Include="include\save_state.hpp" />
+    <ClInclude Include="include\theme.hpp" />
     <ClInclude Include="include\ui_dialog_box.hpp" />
     <ClInclude Include="include\ui_manager.hpp" />
     <ClInclude Include="include\widget.hpp" />
