--- a/tools/editor/editor.vcxproj
+++ b/tools/editor/editor.vcxproj
@@ -612,8 +612,8 @@
       <ObjectFileName Condition="'$(Configuration)|$(Platform)'=='Profile|x64'">$(IntDir)core\pbr\sampler_manager.obj</ObjectFileName>
       <ObjectFileName Condition="'$(Configuration)|$(Platform)'=='Release + ASAN|x64'">$(IntDir)core\pbr\sampler_manager.obj</ObjectFileName>
     </ClCompile>
-    <ClCompile Include="..\..\app\src\main\cpp\sources\pbr\srgb_program.cpp">
-      <ObjectFileName Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(IntDir)core\pbr\srgb_program.obj</ObjectFileName>
+    <ClCompile Include="..\..\app\src\main\cpp\sources\pbr\brightness_program.cpp">
+      <ObjectFileName Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(IntDir)core\pbr\brightness_program.obj</ObjectFileName>
       <ObjectFileName Condition="'$(Configuration)|$(Platform)'=='Debug - GPU select|x64'">$(IntDir)core\pbr\srgb_program.obj</ObjectFileName>
       <ObjectFileName Condition="'$(Configuration)|$(Platform)'=='RenderDoc|x64'">$(IntDir)core\pbr\srgb_program.obj</ObjectFileName>
       <ObjectFileName Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(IntDir)core\pbr\srgb_program.obj</ObjectFileName>
@@ -865,8 +865,7 @@
     <ClInclude Include="..\..\app\src\main\cpp\include\pbr\present_render_pass.hpp" />
     <ClInclude Include="..\..\app\src\main\cpp\include\pbr\sampler.hpp" />
     <ClInclude Include="..\..\app\src\main\cpp\include\pbr\sampler_manager.hpp" />
-    <ClInclude Include="..\..\app\src\main\cpp\include\pbr\srgb_constants.hpp" />
-    <ClInclude Include="..\..\app\src\main\cpp\include\pbr\srgb_program.hpp" />
+    <ClInclude Include="..\..\app\src\main\cpp\include\pbr\brightness_program.hpp" />
     <ClInclude Include="..\..\app\src\main\cpp\include\pbr\stream.hpp" />
     <ClInclude Include="..\..\app\src\main\cpp\include\pbr\text_ui_element.hpp" />
     <ClInclude Include="..\..\app\src\main\cpp\include\pbr\tone_mapper_descriptor_set_layout.hpp" />
@@ -915,9 +914,9 @@
     <Image Include="src\icon.ico" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\..\app\src\main\cpp\include\pbr\brightness_factor.inc" />
     <None Include="..\..\app\src\main\cpp\include\pbr\exposure.inc" />
     <None Include="..\..\app\src\main\cpp\include\pbr\full_screen_triangle.inc" />
-    <None Include="..\..\app\src\main\cpp\include\pbr\srgb_program.inc" />
     <None Include="..\..\app\src\main\cpp\include\pbr\tone_mapper.inc" />
     <None Include="..\..\app\src\main\cpp\include\pbr\ui_program.inc" />
     <None Include="..\..\app\src\main\cpp\include\platform\windows\vulkan_instance.in" />
