shaders: - hlsl file extension in order to be compatible with tokei
scripts:
- LOC counter

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -20,6 +20,20 @@
             ]
         },
         {
+            "label": "Count LOC",
+            "type": "shell",
+            "group": "build",
+
+            "options": {
+                "cwd": "${workspaceFolder}"
+            },
+
+            "command": {
+                "quoting": "weak",
+                "value" : "${workspaceFolder}/scripts/windows/count-loc.ps1"
+            }
+        },
+        {
             "label": "Compile SPIR-V",
             "type": "shell",
             "group": "build",
