core: - vkFlushMappedMemoryRanges has been added - minUniformBufferOffsetAlignment limit - nonCoherentAtomSize limit
pbr:
- UMASparseUniformPool development

--- a/app/src/main/cpp/include/vulkan_device.in
+++ b/app/src/main/cpp/include/vulkan_device.in
@@ -59,6 +59,7 @@ X ( vkDestroyShaderModule )
 X ( vkDestroySwapchainKHR )
 X ( vkDeviceWaitIdle )
 X ( vkEndCommandBuffer )
+X ( vkFlushMappedMemoryRanges )
 X ( vkFreeCommandBuffers )
 X ( vkFreeDescriptorSets )
 X ( vkFreeMemory )
