Documentation: - CPU tracing page has been updated - VVL page has been updated - Release build page has been updated - RenderDoc page has been updated
core:
- ANDROID_VULKAN_ENABLE_VULKAN_VALIDATION_LAYERS → AV_ENABLE_VVL
- ANDROID_ENABLE_TRACE → AV_ENABLE_TRACE
- ANDROID_VULKAN_ENABLE_RENDER_DOC_INTEGRATION → AV_ENABLE_RENDERDOC
- ANDROID_VULKAN_DEBUG → AV_DEBUG

pbr:
- UMA sparse uniform buffer
- GeometryPool refactoring

editor:
- code style

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -218,6 +218,7 @@ add_library ( android-vulkan SHARED
     app/src/main/cpp/sources/pbr/ui_pass_image_descriptor_set_layout.cpp
     app/src/main/cpp/sources/pbr/ui_pass_transform_descriptor_set_layout.cpp
     app/src/main/cpp/sources/pbr/ui_program.cpp
+    app/src/main/cpp/sources/pbr/uma_sparse_uniform_buffer.cpp
     app/src/main/cpp/sources/pbr/uma_sparse_uniform_pool.cpp
     app/src/main/cpp/sources/pbr/uniform_buffer_pool.cpp
     app/src/main/cpp/sources/pbr/uniform_buffer_pool_manager.cpp
@@ -276,12 +277,12 @@ target_compile_options ( android-vulkan PRIVATE
 
 # See docs/preprocessor-macros.md
 target_compile_definitions ( android-vulkan PRIVATE
-#    ANDROID_ENABLE_TRACE
-    ANDROID_NATIVE_MODE_PORTRAIT
-    ANDROID_VULKAN_DEBUG
-#    ANDROID_VULKAN_ENABLE_RENDER_DOC_INTEGRATION
-    ANDROID_VULKAN_ENABLE_VULKAN_VALIDATION_LAYERS
-    ANDROID_VULKAN_STRICT_MODE
+#    AV_ENABLE_TRACE
+    AV_NATIVE_MODE_PORTRAIT
+    AV_DEBUG
+#    AV_ENABLE_RENDERDOC
+    AV_ENABLE_VVL
+    AV_STRICT_MODE
     AV_ARM_NEON
     VK_NO_PROTOTYPES
     VK_USE_PLATFORM_ANDROID_KHR
